final edits for first draft of chapter 4; add image files for chapter 2,3,4

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1637,6 +1637,25 @@ The production of helium and the depletion in tungsten content due to nuclear re
 	file = {Full Text PDF:C\:\\Users\\Sun Myung\\Zotero\\storage\\2Z9B88E4\\Kirk et al. - 2006 - libMesh a C++ library for parallel adaptive mesh .pdf:application/pdf;Kirk et al. - 2006 - libMesh  a C++ library for parallel adaptive mesh.pdf:C\:\\Users\\Sun Myung\\Zotero\\storage\\GLYFYTV8\\Kirk et al. - 2006 - libMesh  a C++ library for parallel adaptive mesh.pdf:application/pdf;Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\CJ6ZDS26\\10.html:text/html},
 }
 
+@article{knoll_jacobian-free_2004,
+	title = {Jacobian-free {Newton}–{Krylov} methods: a survey of approaches and applications},
+	volume = {193},
+	issn = {0021-9991},
+	shorttitle = {Jacobian-free {Newton}–{Krylov} methods},
+	url = {http://www.sciencedirect.com/science/article/pii/S0021999103004340},
+	doi = {10.1016/j.jcp.2003.08.010},
+	abstract = {Jacobian-free Newton–Krylov (JFNK) methods are synergistic combinations of Newton-type methods for superlinearly convergent solution of nonlinear equations and Krylov subspace methods for solving the Newton correction equations. The link between the two methods is the Jacobian-vector product, which may be probed approximately without forming and storing the elements of the true Jacobian, through a variety of means. Various approximations to the Jacobian matrix may still be required for preconditioning the resulting Krylov iteration. As with Krylov methods for linear problems, successful application of the JFNK method to any given problem is dependent on adequate preconditioning. JFNK has potential for application throughout problems governed by nonlinear partial differential equations and integro-differential equations. In this survey paper, we place JFNK in context with other nonlinear solution algorithms for both boundary value problems (BVPs) and initial value problems (IVPs). We provide an overview of the mechanics of JFNK and attempt to illustrate the wide variety of preconditioning options available. It is emphasized that JFNK can be wrapped (as an accelerator) around another nonlinear fixed point method (interpreted as a preconditioning process, potentially with significant code reuse). The aim of this paper is not to trace fully the evolution of JFNK, nor to provide proofs of accuracy or optimal convergence for all of the constituent methods, but rather to present the reader with a perspective on how JFNK may be applicable to applications of interest and to provide sources of further practical information.},
+	language = {en},
+	number = {2},
+	urldate = {2014-01-15},
+	journal = {Journal of Computational Physics},
+	author = {Knoll, D. A. and Keyes, D. E.},
+	month = jan,
+	year = {2004},
+	pages = {357--397},
+	file = {Knoll and Keyes - 2004 - Jacobian-free Newton–Krylov methods a survey of a.pdf:C\:\\Users\\Sun Myung\\Zotero\\storage\\NSP6UHVD\\Knoll and Keyes - 2004 - Jacobian-free Newton–Krylov methods a survey of a.pdf:application/pdf;ScienceDirect Full Text PDF:C\:\\Users\\Sun Myung\\Zotero\\storage\\NVMEG5HR\\Knoll and Keyes - 2004 - Jacobian-free Newton–Krylov methods a survey of a.pdf:application/pdf;ScienceDirect Full Text PDF:C\:\\Users\\Sun Myung\\Zotero\\storage\\TU63XHWT\\Knoll and Keyes - 2004 - Jacobian-free Newton–Krylov methods a survey of a.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\E9WEA9DH\\S0021999103004340.html:text/html;ScienceDirect Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\JG3ME86P\\S0021999103004340.html:text/html},
+}
+
 @unpublished{diamond_phenomena_2018,
 	title = {Phenomena {Important} in {Modeling} and {Simulation} of {Molten} {Salt} {Reactors}.},
 	language = {en},
