MSRE chapter edits

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -976,7 +976,7 @@ codes.},
 	author = {Rykhlevskii, Andrei and Bae, Jin Whan and Huff, Kathryn D.},
 	month = jun,
 	year = {2019},
-	keywords = {Reactor physics, Parallel computing, Molten salt reactor, Online reprocessing, agent based modeling, Finite elements, Hydrologic contaminant transport, MOOSE, Multiphysics, nuclear engineering, Nuclear fuel cycle, Object orientation, repository, Simulation, Systems analysis, Depletion, Molten salt breeder reactor, Python, Salt treatment},
+	keywords = {Reactor physics, Parallel computing, Molten salt reactor, Online reprocessing, agent based modeling, Finite elements, Hydrologic contaminant transport, MOOSE, Multiphysics, nuclear engineering, Nuclear fuel cycle, Object orientation, repository, Simulation, Systems analysis, Depletion, Molten salt breeder reactor, Python, Salt treatment, Include File on Website},
 	pages = {366--379},
 	file = {Rykhlevskii et al. - 2019 - Modeling and simulation of online reprocessing in .pdf:C\:\\Users\\Sun Myung\\Zotero\\storage\\IQPHC25M\\Rykhlevskii et al. - 2019 - Modeling and simulation of online reprocessing in .pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\W5RDKFMS\\S0306454919300350.html:text/html;ScienceDirect Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\P6PJ667C\\S0306454919300350.html:text/html},
 }
@@ -1605,6 +1605,7 @@ The production of helium and the depletion in tungsten content due to nuclear re
 	author = {Park, Sun Myung and Rykhlevskii, Andrei and Huff, Kathryn},
 	month = sep,
 	year = {2019},
+	keywords = {Include File on Website},
 	file = {Park et al. - 2019 - Safety Analysis of Molten Salt Fast Reactor Fuel C.pdf:C\:\\Users\\Sun Myung\\Zotero\\storage\\EXYUTUGW\\Park et al. - 2019 - Safety Analysis of Molten Salt Fast Reactor Fuel C.pdf:application/pdf},
 }
 
@@ -1717,7 +1718,7 @@ The production of helium and the depletion in tungsten content due to nuclear re
 	author = {Lindsay, Alexander and Ridley, Gavin and Rykhlevskii, Andrei and Huff, Kathryn},
 	month = apr,
 	year = {2018},
-	keywords = {Reactor physics, Parallel computing, agent based modeling, Finite elements, Hydrologic contaminant transport, MOOSE, Multiphysics, nuclear engineering, Nuclear fuel cycle, Object orientation, repository, Simulation, Systems analysis},
+	keywords = {Reactor physics, Parallel computing, agent based modeling, Finite elements, Hydrologic contaminant transport, MOOSE, Multiphysics, nuclear engineering, Nuclear fuel cycle, Object orientation, repository, Simulation, Systems analysis, Include File on Website},
 	pages = {530--540},
 	file = {Lindsay et al. - 2018 - Introduction to Moltres An application for simula.pdf:C\:\\Users\\Sun Myung\\Zotero\\storage\\RCWUNGTP\\Lindsay et al. - 2018 - Introduction to Moltres An application for simula.pdf:application/pdf;Lindsay et al. - 2018 - Introduction to Moltres An application for simula.pdf:C\:\\Users\\Sun Myung\\Zotero\\storage\\3GEC6NQ9\\Lindsay et al. - 2018 - Introduction to Moltres An application for simula.pdf:application/pdf;Moltres.pdf:C\:\\Users\\Sun Myung\\Zotero\\storage\\4XDXRICB\\Moltres.pdf:application/pdf;ScienceDirect Full Text PDF:C\:\\Users\\Sun Myung\\Zotero\\storage\\E2T9U5IX\\Lindsay et al. - 2018 - Introduction to Moltres An application for simula.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\3DT9TEY3\\S0306454917304760.html:text/html},
 }
@@ -1737,7 +1738,7 @@ The production of helium and the depletion in tungsten content due to nuclear re
 	month = feb,
 	year = {2019},
 	doi = {10.5281/zenodo.3354563},
-	keywords = {nuclear, molten salt reactor, multiphysics},
+	keywords = {nuclear, molten salt reactor, multiphysics, Include File on Website},
 	pages = {1--12},
 	file = {uiuc-arfc-2019-01.pdf:C\:\\Users\\Sun Myung\\Zotero\\storage\\CSVHID3A\\uiuc-arfc-2019-01.pdf:application/pdf;Zenodo Full Text PDF:C\:\\Users\\Sun Myung\\Zotero\\storage\\RI2BAY9M\\Kathryn Huff - 2019 - Identifying MSR Multiphysics Modeling Challenges.pdf:application/pdf},
 }
@@ -2529,6 +2530,7 @@ This thesis aligns with the University of Illinois’ goals to reduce carbon emi
 	author = {Park, Sun Myung and Munk, Madicken},
 	month = aug,
 	year = {2022},
+	keywords = {Include File on Website},
 	pages = {109111},
 	file = {Park and Munk - 2022 - Verification of moltres for multiphysics simulatio.pdf:C\:\\Users\\Sun Myung\\Zotero\\storage\\PHNTVU4R\\Park and Munk - 2022 - Verification of moltres for multiphysics simulatio.pdf:application/pdf},
 }
@@ -3828,7 +3830,7 @@ INIS Reference Number: 8288836},
 	author = {Giudicelli, Guillaume and Lindsay, Alexander and Harbour, Logan and Icenhour, Casey and Li, Mengnan and Hansel, Joshua E. and German, Peter and Behne, Patrick and Marin, Oana and Stogner, Roy H. and Miller, Jason M. and Schwen, Daniel and Wang, Yaqi and Munday, Lynn and Schunert, Sebastian and Spencer, Benjamin W. and Yushu, Dewen and Recuero, Antonio and Prince, Zachary M. and Nezdyur, Max and Hu, Tianchen and Miao, Yinbin and Jung, Yeon Sang and Matthews, Christopher and Novak, April and Langley, Brandon and Truster, Timothy and Nobre, Nuno and Alger, Brian and Andrs, David and Kong, Fande and Carlsen, Robert and Slaughter, Andrew E. and Peterson, John W. and Gaston, Derek and Permann, Cody},
 	month = may,
 	year = {2024},
-	keywords = {Finite-element, Finite-volume, Framework, Multiphysics, Multiscale, Parallel},
+	keywords = {Multiphysics, Parallel, Finite-element, Framework, Multiscale, Finite-volume},
 	pages = {101690},
 	file = {ScienceDirect Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\F9CP4B5Y\\S235271102400061X.html:text/html},
 }
@@ -3845,4 +3847,19 @@ INIS Reference Number: 8288836},
 	url = {https://llnl.gov/casc/hypre},
 	author = {hypre},
 	year = {2022},
+}
+
+@phdthesis{jaradat_development_2021-1,
+	type = {Thesis},
+	title = {Development of {Neutronics} {Analysis} {Capabilities} for {Application} of {Flowing} {Fuel} {Molten} {Salt} {Reactors}},
+	url = {http://deepblue.lib.umich.edu/handle/2027.42/171425},
+	abstract = {As one of generation IV reactor designs, molten salt reactors (MSRs) with fuel dissolved in liquid salt are gaining increasing interest from the industry due to their excellent characteristics in sustainability, passive safety, and resource utilization. Most of the currently proposed MSR concepts with liquid fuel utilize flowing fuel. The design and safety analyses of flowing fuel MSRs require new modeling and simulation capabilities that can address the unique characteristics of flowing liquid fuel, which are different from conventional solid fuel reactors. The fuel salt circulates throughout the primary system, acting as fuel and coolant at the same time. Thus, part of the delayed neutron precursors generated in the core decay in positions of low importance or even out of the core. This changes the effective delayed neutron fraction and makes the dynamic behavior of MSRs different from solid fuel reactors. Furthermore, the neutronics and thermal hydraulics are strongly coupled due to the large thermal expansion of liquid fuel. 
+Most of the available neutronics tools for the design and safety analysis of MSRs are based on various approximations tailored to a targeted system. Motivated by the need for a general neutronics analysis tool for application to fast and thermal MSRs, this thesis develops and implements new modeling capabilities for flowing fuel to the nodal transport code PROTEUS-NODAL. The steady state solver has been extended to model the drift of the delayed neutron precursors, and new transient solvers have been developed for flowing fuel applications. A thermal hydraulics solver has also been developed and implemented to address the strong coupling of the neutronics and thermal hydraulics by considering the velocity, temperature, and density fields in the thermal feedback calculations. In order to perform efficient and practical transient analyses of MSRs, an adaptive time-step selection scheme has been developed based on control theory. In this scheme, the time-step size is varied based on the estimated local solution errors during the transient. This helps in reducing the computational inefficiency due to unnecessarily small time-step size and avoiding the loss of accuracy that might be introduced due to a large time-step size.
+Additionally, MSR fuel cycle analysis capability has been implemented by considering online refueling of fuel salt and reprocessing to extract fission products. Utilizing the fuel cycle model, fission products are categorized into a few decay heat precursor groups based on their chemical characteristics to include the decay heat in the transient and fuel cycle analyses, and a nuclide drift model has been added to consider the distribution of the fuel salt nuclides in the feedback model to simulate a hypothetical over-fueling of the fuel salt during normal operation. 
+The developed capabilities have been verified using the Molten Salt Fast Reactor (MSFR) numerical benchmarks and validated against the available measured data of the Molten Salt Reactor Experiment (MSRE). The verification and validation test results demonstrate that these capabilities can model the relevant physics of flowing fuel MSRs accurately and efficiently. The developed code can be used for steady state, transient, and fuel cycle analyses of thermal and fast spectrums MSRs designs.},
+	language = {en},
+	urldate = {2024-07-15},
+	author = {Jaradat, Mustafa},
+	year = {2021},
+	file = {Full Text PDF:C\:\\Users\\Sun Myung\\Zotero\\storage\\KDVVEUAI\\Jaradat - 2021 - Development of Neutronics Analysis Capabilities fo.pdf:application/pdf},
 }
