--- a/main.tex
+++ b/main.tex
@@ -146,8 +146,9 @@ nogroupskip=true]
 \input{hybrid}
 \glsresetall
 
-\chapter{Verification of the Hybrid $S_N$-Diffusion Method}
-\label{chap:hybrid-verification}
+\chapter{MSRE Model \& Results}
+\label{chap:msre}
+\input{msre}
 \glsresetall
 
 %\chapter{Proposed Work}
