--- a/appendix.tex
+++ b/appendix.tex
@@ -1,73 +1,11 @@
-\section{Numerical Implementation} \label{sec:implementation}
+\section{Numerical Implementation of Neutronics Solvers on Python} \label{sec:implementation}
 
-In Section \ref{sec:theory}, I presented the theoretical basis for the hybrid
-$S_N$-diffusion method and demonstrated the method on a simple problem. Now I will discuss
-numerical implementation details of group
-constant data processing and the neutron diffusion, $S_N$ neutron transport, and hybrid
-$S_N$-diffusion solvers. I implemented all numerical solvers and analysis scripts in the Python
-programming language. First, I will discuss the material group constant data generation and
-postprocessing steps. Next, I present the implementation details of the neutron
-diffusion and $S_N$ numerical methods. Lastly, I present how they are coupled to form the hybrid
-$S_N$-diffusion method.
+In Section \ref{sec:diffusion-correction}, I presented the theoretical basis for the hybrid
+$S_N$-diffusion method with diffusion correction terms. This section presents numerical
+implementation details of the neutron diffusion, $S_N$ neutron transport, and hybrid
+$S_N$-diffusion solvers in the Python programming language for this work.
 
-\subsection{Group Constant Data Generation}
-
-The group constants required by either or both neutron diffusion and $S_N$ neutron transport
-methods are:
-%
-\begin{itemize}
-  \item $\Sigma_{t,g}$: Macroscopic total cross section in group $g$,
-  \item $\Sigma_{r,g}$: Macroscopic removal cross section in group $g$,
-  \item $\Sigma_s^{g'\rightarrow g}$: Macroscopic group-to-group scattering cross section matrix,
-  \item $\Sigma_{s,l}^{g'\rightarrow g}$: $l$-th Legendre moment of the macroscopic
-    group-to-group scattering cross section matrix,
-  \item $\Sigma_{sp,l}^{g'\rightarrow g}$: $l$-th Legendre moment of the macroscopic
-    group-to-group scattering production cross section matrix,
-  \item $D_g$: $P_1$-based diffusion coefficient in group $g$,
-  \item $\nu\Sigma_{f,g}$: Product of the average number of neutrons produced per fission and the
-    macroscopic fission cross section in group $g$,
-  \item $\chi_g$: Neutron fission spectrum in group $g$.
-\end{itemize}
-%
-These group constants are generated using OpenMC's multigroup cross section generation capability
-\cite{boyd_multigroup_2019} and postprocessed using a Python script into JSON format files.
-$\Sigma_{r,g}$ is the only quantity that OpenMC does not directly provide. It is calculated as
-%
-\begin{align}
-  \Sigma_{r,g} =& \sum^G_{g'\neq g}\Sigma_s^{g\rightarrow g'}+\Sigma_{a,g}-\left(\Sigma_{sp}^{g
-    \rightarrow g} - \Sigma_s^{g\rightarrow g}\right)
-  \shortintertext{where}
-      \Sigma_{a,g} =& \mbox{ macroscopic absorption cross section in group $g$,} \nonumber \\
-      \Sigma_{sp}^{g\rightarrow g} =& \mbox{ macroscopic scattering production cross section from
-      group $g$ to $g$.} \nonumber
-\end{align}
-%
-$\Sigma_{r,g}$ primarily represents the loss of neutrons from group $g$ through outscattering and
-absorption. $\Sigma_{sp}^{g\rightarrow g}$ incorporates neutron multiplication effects from neutron
-knockout reactions into the scattering cross section. Neutron knockout reactions are commonly
-tallied as scattering reactions, and $\Sigma_{r,g}$ is a convenient term to
-incorporate neutron knockout effects into the neutron diffusion equations. I ran all test cases for
-$S_N$ and hybrid method calculations with up to the 2nd Legendre moments of the scattering
-cross sections ($L=2$).
-
-OpenMC uses the $P_1$ flux-limited formulation \cite{pomraning_flux-limited_1984} for calculating
-$D_g$ as follows
-%
-\begin{align}
-  D_g =& \frac{1}{3\Sigma_{tr,g}},
-  \shortintertext{where}
-  \Sigma_{tr,g} =& \frac{\langle\Sigma_{t,g}\phi_g\rangle-\langle\Sigma_{s1,g}\phi_g\rangle}
-  {\langle\phi_g\rangle}, \nonumber \\
-  \langle\Sigma_{t,g}\phi_g\rangle =& \int_{r\in V}dr \int_{4\pi}d\Omega\int^{E_{g-1}}_{E_g}dE\
-  \Sigma_{t,g}(r,E)\Psi(r,E,\Omega), \nonumber \\
-  \langle\Sigma_{s1,g}\phi_g\rangle =& \int_{r\in V}dr \int_{4\pi}d\Omega\int^{E_{g-1}}_{E_g}dE
-  \int_{4\pi}d\Omega'\int^{\infty}_0dE'\int^1_{-1}d\mu\ \mu\Sigma_s(r,E'\rightarrow E,\Omega'\cdot
-  \Omega)\phi(r,E',\Omega'), \nonumber \\
-  \langle \phi \rangle =& \int_{r\in V}dr\int_{4\pi}d\Omega\int^{E_{g-1}}_{E_g}dE\ \Psi(r,E,\Omega)
-  .\nonumber
-\end{align}
-
-\subsection{Neutron Diffusion Method}
+\subsection{Neutron Diffusion Method} \label{sec:python-diffusion}
 
 On a 1-D uniform spatial grid with $I+1$ mesh points, the neutron scalar flux variables
 $\phi_{g,i}$ are defined on the mesh points $x_i$. Theoretically, group constants are volumetric
@@ -180,7 +118,7 @@ from the discrete flux values in $\bm{x}$. Finally, the final $\phi_{g,i}$ is no
 factor of $|\bm{b}|/k$ (no. of source neutrons) to obtain the neutron scalar flux per source
 neutron.
 
-\subsection{$S_N$ Neutron Transport Method}
+\subsection{$S_N$ Neutron Transport Method} \label{python-sn}
 
 For the 1-D $S_N$ neutron transport method on the same uniform spatial grid with $I+1$ mesh points,
 the neutron angular flux variables $\Psi_{g,i,n}=\Psi_g(x_i,\mu_n)$ are defined on the mesh points
@@ -281,7 +219,7 @@ The total computational work is subdivided into several smaller tasks classified
 of $g$ and $n$ values; each thread computes all $\Psi^m$ or $\phi^m$ values on the mesh for a given
 pair of indexes $g$ and $n$.
 
-\subsection{Hybrid $S_N$-Diffusion Method}
+\subsection{Hybrid $S_N$-Diffusion Method} \label{python-hybrid}
 
 Without loss of generality, consider a 1-D system symmetric about the left boundary at $x_0=0$ cm.
 In this case, as with Case 0, the control rod region is the left-most region, followed by other
