--- a/main.tex
+++ b/main.tex
@@ -40,6 +40,7 @@
 \usepackage{tabularx}
 \usepackage{float}
 \usepackage{enumitem}
+\setlist[itemize]{noitemsep}
 \usepackage{diagbox}
 \usepackage{courier}
 \usepackage{pdflscape}
@@ -138,7 +139,7 @@ nogroupskip=true]
 
 \chapter{Verification of Multiphysics Features in Moltres}
 \label{chap:verification}
-\input{verification}
+%\input{verification}
 \glsresetall
 
 \chapter{Hybrid $S_N$-Diffusion Method}
